<resources>
    <string name="app_name">FarmCiti</string>
    <string name="title_analytics">Analytics</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_record">Record</string>
    <string name="analytics_frag">Analytics_Frag</string>
    <string name="dashboard_frag">Dashboard_Frag</string>
    <string name="entryform_frag">Entryform_Frag</string>
    <string name="emoji_grain">&#x1F33E;</string>
    <string name="emoji_cow">&#x1F404;</string>
    <string name="emoji_chicken">&#x1F413;</string>
    <string name="emoji_pig">&#x1F416;</string>
    <string name="emoji_other_meat">&#x1F356;</string>
    <string name="entry_form_grain">Grain &#x1F33E;</string>
    <string name="entry_beef">Cows &#x1F42E;</string>
    <string name="entry_chicken">Chickens &#x1F414;</string>
    <string name="entry_pork">Pigs &#x1F437;</string>
    <string name="entry_other_meat">Meat &#x1F356;</string>
    <string name="entry_form_beef">Beef &#x1F42E;</string>
    <string name="entry_form_chicken">Chicken &#x1F414;</string>
    <string name="entry_form_pork">Pork &#x1F437;</string>
    <string name="entry_form_other_meat">Other Meat &#x1F356;</string>
    <string name="record_your_consumption">Record Your Consumption!</string>
    <string name="consumption_type">Consumption Type</string>
    <string name="approximate_amount_in_gram">Approximate weight in "g"</string>
    <string name="amount">Amount</string>
    <string name="save_record">Save record</string>
    <string name="date">Date</string>
    <string name="pick_time">pick date</string>
    <string name="meat_graph_caption">Your Meat Consumption vs Average Meat Consumption (g)</string>
    <string name="water_graph_caption">Amount of Water Used to Raise Your Food (L)</string>
    <string name="feed_graph_caption">Amount of Animal Feed Used to Raise Your Food (g)</string>
    <string name="carbon_graph_caption">Carbon Emissions Released While Raising Your Food (kg)</string>
</resources>
