<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/entryform_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:gravity="center"
        android:text="@string/record_your_consumption"
        android:textSize="35sp" />

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/entryform_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/entryform_title"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/label_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="17sp"
            android:text="@string/consumption_type"/>

        <Spinner
            android:id="@+id/food_types_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/entryform_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/entryform_select"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/label_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="17sp"
            android:text="@string/amount"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/approximate_amount_in_gram"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="number"
            android:textCursorDrawable="@null"
            android:layout_weight="3"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/entryform_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/entryform_amount"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="17sp"
            android:text="@string/date"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/pick_time"
            android:id="@+id/pick_time"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/datepick_result"
        android:layout_below="@id/entryform_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/datepick_result"
        android:id="@+id/save_record"
        android:text="@string/save_record"
        android:textSize="20sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>

</RelativeLayout>