<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewDashBoard"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
        <LinearLayout
            android:id="@+id/dashboardEntry1Layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:padding="@dimen/frag_dashboard_rectangle_margin"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif"
                android:textSize="21sp"
                android:text="&#x1f31e; Farm Citi &#x1f31e;"/>

            <RelativeLayout
                android:id="@+id/dashboardEntry2Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dashboardEntry2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/frag_dashboard_rectangle_margin"
                    android:layout_marginRight="@dimen/frag_dashboard_rectangle_margin"
                    android:layout_marginTop="@dimen/frag_dashboard_rectangle_margin_inside"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/frag_Entry_Form_Text_Size"
                    android:text="@string/entry_beef"/>

                <TextView
                    android:id="@+id/farm_beef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="@dimen/frag_Dashboard_Rectangle_size_width"
                    android:height="@dimen/frag_Dashboard_Rectangle_size_height"
                    android:layout_below="@+id/dashboardEntry2"
                    android:padding="@dimen/frag_dashboard_rectangle_margin_inside"
                    android:layout_marginLeft="@dimen/frag_dashboard_rectangle_margin"
                    android:layout_marginRight="@dimen/frag_dashboard_rectangle_margin"
                    android:background="@drawable/dashboard_border"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/frag_Entry_Form_Text_Size"
                    android:text="@string/emoji_cow"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/dashboardEntry3Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dashboardEntry3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/frag_dashboard_rectangle_margin"
                    android:layout_marginRight="@dimen/frag_dashboard_rectangle_margin"
                    android:layout_marginTop="@dimen/frag_dashboard_rectangle_margin_inside"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/frag_Entry_Form_Text_Size"
                    android:text="@string/entry_chicken"/>

                <TextView
                    android:id="@+id/farm_chicken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="@dimen/frag_Dashboard_Rectangle_size_width"
                    android:height="@dimen/frag_Dashboard_Rectangle_size_height"
                    android:layout_below="@+id/dashboardEntry3"
                    android:padding="@dimen/frag_dashboard_rectangle_margin_inside"
                    android:layout_marginLeft="@dimen/frag_dashboard_rectangle_margin"
                    android:layout_marginRight="@dimen/frag_dashboard_rectangle_margin"
                    android:background="@drawable/dashboard_border"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/frag_Entry_Form_Text_Size"
                    android:text="@string/emoji_chicken"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/dashboardEntry4Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dashboardEntry4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/frag_dashboard_rectangle_margin"
                    android:layout_marginRight="@dimen/frag_dashboard_rectangle_margin"
                    android:layout_marginTop="@dimen/frag_dashboard_rectangle_margin_inside"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/frag_Entry_Form_Text_Size"
                    android:text="@string/entry_pork"/>

                <TextView
                    android:id="@+id/farm_pork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="@dimen/frag_Dashboard_Rectangle_size_width"
                    android:height="@dimen/frag_Dashboard_Rectangle_size_height"
                    android:layout_below="@+id/dashboardEntry4"
                    android:padding="@dimen/frag_dashboard_rectangle_margin_inside"
                    android:layout_marginLeft="@dimen/frag_dashboard_rectangle_margin"
                    android:layout_marginRight="@dimen/frag_dashboard_rectangle_margin"
                    android:background="@drawable/dashboard_border"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/frag_Entry_Form_Text_Size"
                    android:text="@string/emoji_pig"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/dashboardEntry5Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="80dp">
                <TextView
                    android:id="@+id/dashboardEntry5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/frag_dashboard_rectangle_margin"
                    android:layout_marginRight="@dimen/frag_dashboard_rectangle_margin"
                    android:layout_marginTop="@dimen/frag_dashboard_rectangle_margin_inside"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/frag_Entry_Form_Text_Size"
                    android:text="@string/entry_other_meat"/>

                <TextView
                    android:id="@+id/farm_other_meat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="@dimen/frag_Dashboard_Rectangle_size_width"
                    android:height="@dimen/frag_Dashboard_Rectangle_size_height"
                    android:layout_below="@+id/dashboardEntry5"
                    android:padding="@dimen/frag_dashboard_rectangle_margin_inside"
                    android:layout_marginLeft="@dimen/frag_dashboard_rectangle_margin"
                    android:layout_marginRight="@dimen/frag_dashboard_rectangle_margin"
                    android:background="@drawable/dashboard_border"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/frag_Entry_Form_Text_Size"
                    android:text="@string/emoji_other_meat"/>
            </RelativeLayout>

        </LinearLayout>




    </ScrollView>

</RelativeLayout>